--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -40,3 +40,19 @@
   color: #555;
   cursor: pointer;
 }
+
+.cartIcon {
+  position: relative;
+}
+
+.cartCount {
+  position: absolute;
+  top: -6px;
+  right: -10px;
+  background: red;
+  color: white;
+  font-size: 12px;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-weight: bold;
+}
