--- a/src/Components/AdminRegister/AdminRegister.module.css
+++ b/src/Components/AdminRegister/AdminRegister.module.css
@@ -45,7 +45,7 @@
 .input {
   width: 100%;
   box-sizing: border-box;
-  padding: 12px 44px 12px 14px; /* щоб не перекривалась іконкою */
+  padding: 12px 44px 12px 14px;
   border: 1px solid #ccc;
   border-radius: 8px;
   font-size: 14px;
