--- a/src/Components/ContactsPage/ContactsPage.module.css
+++ b/src/Components/ContactsPage/ContactsPage.module.css
@@ -21,7 +21,6 @@
   justify-content: center;
 }
 
-/* Card styles */
 .card {
   background: #f7f7f5;
   border-radius: 20px;
@@ -47,7 +46,6 @@ p {
   margin: 0;
 }
 
-/* Form styles */
 .form {
   display: flex;
   flex-direction: column;
@@ -67,7 +65,6 @@ p {
 
 .textarea {
   min-height: 100px;
-  /* resize: vertical; */
   resize: none;
 }
 
@@ -75,7 +72,7 @@ p {
 .textarea:focus {
   outline: none;
   border-color: #000;
-  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1); /* м'яке підсвічування */
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .btn {
